--- a/assets/package.json
+++ b/assets/package.json
@@ -12,7 +12,8 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "tailwindcss": "^1.8.3"
+    "tailwindcss": "^1.8.3",
+    "tailwindcss-truncate-multiline": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
