--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -7,5 +7,7 @@ node_version=12.18.4
 # We can set the version of NPM to use for the app here
 npm_version=6.14.8
 
+assets_path=assets
+
 # We can change phoenix mix namespace tasks. E.g. phx for phoenix 1.3 support.
 phoenix_ex=phx
