--- a/assets/package.json
+++ b/assets/package.json
@@ -7,28 +7,32 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@tailwindcss/ui": "^0.7.2",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "postcss-loader": "^4.0.4",
-    "tailwindcss": "^1.9.6",
+    "postcss-loader": "^4.1.0",
+    "tailwindcss": "^2.0.1",
     "tailwindcss-truncate-multiline": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^6.2.1",
+    "autoprefixer": "^10.0.2",
+    "babel-loader": "^8.2.1",
+    "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^4.3.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "hard-source-webpack-plugin": "^0.13.1",
-    "mini-css-extract-plugin": "^0.11.3",
+    "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^10.0.5",
-    "terser-webpack-plugin": "^2.3.2",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.2"
+    "postcss": "^8.1.8",
+    "sass-loader": "^10.1.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
   }
 }
